fix: text wrapping in narrow flame graphs
Fixes http://github.com/microsoft/vscode/issues/140528

--- a/packages/vscode-js-profile-flame/src/client/flame-graph.css
+++ b/packages/vscode-js-profile-flame/src/client/flame-graph.css
@@ -98,6 +98,16 @@
   align-items: flex-start;
 }
 
+@media (max-width: 400px) {
+  .info {
+    flex-direction: column;
+  }
+
+  .info dl {
+    margin-bottom: 1rem;
+  }
+}
+
 .info dl {
   display: grid;
   align-items: flex-start;
@@ -115,6 +125,10 @@
 
 .info ol {
   padding-left: 1em;
+}
+
+.info ol li {
+  word-break: break-all;
 }
 
 .info ol li a {
